# VoxMD

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.cursor/plans/: voxmd_tauri_app_c6eaa6aa.plan.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  tauri-release.yml
scripts/: ensure-vulkan-sdk.sh
src/: App.tsx  defaults.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  lib.rs  llm.rs  main.rs  meta.rs  model_download.rs  pipeline.rs
