[package]
name = "voxmd"
version = "0.9.3"
description = "VoxMD – lokales Audio-Transkript mit Whisper (Vulkan) und LLM"
authors = ["VoxMD contributors"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "voxmd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# GPU: `cargo tauri build --features gpu-vulkan` (Vulkan SDK / Loader auf dem System nötig)
default = []
gpu-vulkan = ["whisper-rs/vulkan"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "fs"] }
whisper-rs = { version = "0.16", default-features = false }
async-openai = "0.24"
lofty = "0.22"
symphonia = { version = "0.5.4", features = ["all"] }
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures = "0.3"
dirs = "6"
